--- a/index_3.html
+++ b/index_3.html
@@ -17,16 +17,6 @@
 	<!-- Header CSS (First Sections of Website: paste after release from _header.min.css here) -->
 	<style>body,h1,h2,h3,h4,h5,h6{line-height:1.375em}body{font-size:15px;min-width:320px;position:relative;font-family:RalewayRegular,sans-serif;overflow-x:hidden;color:#333}.hidden{display:none}a,a:active,a:focus,a:hover{color:#F39F18;text-decoration:underline;outline:0}.headers,h1,h2,h3,h4,h5,h6{font-family:PFCentroSlabProMedium,"Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;text-transform:uppercase;font-weight:400;color:#2c3949}.main-mnu li a:hover,.main-mnu li.active a{color:#F39F18;text-decoration:underline}h1{font-size:3.125em}h2{font-size:2em}h3{font-size:1.625em}b,strong{font-family:RalewayBold,"Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;font-weight:400}.before,.main-head::before{content:'';width:100%;height:100%;position:absolute;left:0;top:0}.main-head,.phone-wrap{position:relative}.trans{-webkit-transition:all .5s ease;-o-transition:all .5s ease;transition:all .5s ease}.forms input,.main-mnu li a{-webkit-transition:all .5s ease}.header-wrap ul,.main-mnu ul,.ulmnu{list-style-type:none;padding:0;margin:0}.header-wrap ul li,.main-mnu ul li,.ulmnu li{display:inline-block}.main-head{min-height:620px;-webkit-background-size:cover;background-size:cover;background-position:center;padding-bottom:120px}.main-head::before{background-color:#394b5f;opacity:.85}.main-head h1{text-transform:none;line-height:1.125em}.top-line{padding-top:45px;min-height:160px;background-image:url(img/top_gradient.png);background-repeat:repeat-x}.logo{opacity:.95}.logo img{width:100px}.main-mnu{font-size:.9375em}.main-mnu li{line-height:48px;padding:0 10px}.main-mnu li a{-o-transition:all .5s ease;transition:all .5s ease}.header-wrap ul li a,.main-mnu a{text-decoration:none;color:#fff}.phone-wrap .phone{opacity:.9;color:#fff;font-family:RobotoBold,"Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;font-size:1.25em;line-height:48px;text-align:right;white-space:nowrap}.phone-wrap .toggle-mnu{display:block;float:right;position:absolute;right:0;top:0;text-align:center;line-height:48px}.toggle-mnu{display:block;width:28px;height:28px;margin:22px auto 0}.toggle-mnu span:after,.toggle-mnu span:before{content:'';position:absolute;left:0;top:-9px}.toggle-mnu span:after{top:9px}.toggle-mnu span{position:relative;display:block}.toggle-mnu span,.toggle-mnu span:after,.toggle-mnu span:before{width:100%;height:2px;background-color:#fff;-webkit-transition:all .3s;-o-transition:all .3s;transition:all .3s;-webkit-backface-visibility:hidden;backface-visibility:hidden;-webkit-border-radius:2px;border-radius:2px}.toggle-mnu.on span{background-color:transparent}.toggle-mnu.on span:before{-webkit-transform:rotate(45deg) translate(5px,5px);-ms-transform:rotate(45deg) translate(5px,5px);transform:rotate(45deg) translate(5px,5px)}.toggle-mnu.on span:after{-webkit-transform:rotate(-45deg) translate(7px,-8px);-ms-transform:rotate(-45deg) translate(7px,-8px);transform:rotate(-45deg) translate(7px,-8px)}.toggle-mnu.on+#menu{opacity:1;visibility:visible}.header-wrap{margin-top:40px}.header-wrap h1{margin-top:120px;color:#fff;border-bottom:#F39F18 8px solid;display:inline-block;padding-bottom:10px}.header-wrap ul{margin-top:10px}.header-wrap ul li{display:block;font-family:RalewaySemiBold,"Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;font-size:18px;margin-bottom:12px;position:relative;padding-left:16px}.forms h4,.forms input{font-family:PFCentroSlabProMedium,"Helvetica Neue",Helvetica,Roboto,Arial,sans-serif}.header-wrap ul li::before{content:'';display:block;height:11px;height:0;width:0;border-bottom:6px solid transparent;border-left:6px solid #F39F18;border-top:6px solid transparent;position:absolute;top:4px;left:0}.header-wrap ul li a:hover{text-decoration:underline}.header-left{margin-bottom:50px}.forms{opacity:.8;background-color:rgba(36,51,67,.8);padding:35px 35px 30px;color:#97a4b2;font-size:.875em;border-bottom:#1A222B 3px solid}.forms h4{color:#fff;font-size:2.0625em;text-transform:none;margin:0}.forms p{line-height:1.4375em;margin-top:15px}.forms label{margin-top:22px;margin-bottom:20px;display:block}.forms label span{letter-spacing:1.5px;display:block;margin-bottom:6px;color:#778390}.forms input{display:block;width:100%;border:none;-webkit-box-shadow:0 -3px #1F2A36;box-shadow:0 -3px #1F2A36;background-color:#34465A;text-indent:10px;padding:10px 0;-o-transition:all .5s ease;transition:all .5s ease;color:#fff;font-size:1.25em}.buttons,.buttons:active,.buttons:focus,.buttons:hover{text-decoration:none;color:#111}.forms input:focus{-webkit-box-shadow:0 -5px #F39F18;box-shadow:0 -5px #F39F18;background-color:#394E65}.forms .buttons{margin-top:10px}.arrow-wrap,.button-wrap{text-align:center}.buttons{display:inline-block;border:none;background-color:#F39F18;font-family:PFCentroSlabProBold,"Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;font-family:1.375em;font-size:1.375em;padding:12px 30px;border-bottom:#B97200 3px solid;-webkit-transition:all .5s ease;-o-transition:all .5s ease;transition:all .5s ease}.buttons:hover{background-color:#FFB338}.buttons:active{background-color:#DB8C0E}.arrow-wrap{position:relative;z-index:2;top:50px}.arrow-bottom{display:inline-block;width:40px;height:40px;background-image:url(img/arrow_down.png);cursor:pointer;opacity:.7;-webkit-transition:all .25s ease;-o-transition:all .25s ease;transition:all .25s ease}.arrow-bottom:hover{opacity:1}</style>
 
-	<!-- Fonts Loader from _fonts.css (HTML5 LocalStorage) 
-	<script>!function(){function e(e,t,n){e.addEventListener?e.addEventListener(t,n,!1):e.attachEvent&&e.attachEvent("on"+t,n)}function t(e){return window.localStorage&&localStorage.font_css_cache&&localStorage.font_css_cache_file===e}function n(){if(window.localStorage&&window.XMLHttpRequest)if(t(o))a(localStorage.font_css_cache);else{var n=new XMLHttpRequest;n.open("GET",o,!0),e(n,"load",function(){4===n.readyState&&(a(n.responseText),localStorage.font_css_cache=n.responseText,localStorage.font_css_cache_file=o)}),n.send()}else{var c=document.createElement("link");c.href=o,c.rel="stylesheet",c.type="text/css",document.getElementsByTagName("head")[0].appendChild(c),document.cookie="font_css_cache"}}function a(e){var t=document.createElement("style");t.innerHTML=e,document.getElementsByTagName("head")[0].appendChild(t)}var o="_fonts.min.css";window.localStorage&&localStorage.font_css_cache||document.cookie.indexOf("font_css_cache")>-1?n():e(window,"load",n)}();</script>
-	-->
-
-	<!-- Load CSS Compilled without JS -->
-	<noscript>
-		<!-- <link rel="stylesheet" href="_header.min.css"> -->
-		<!-- <link rel="stylesheet" href="_main.min.css"> -->
-	</noscript> 
-
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -34,7 +24,9 @@
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
-
+	<link rel="stylesheet" href="libs/animate/animate.css">
+	<link rel="stylesheet" href="main.css">
+	
 </head>
 
 <body>
@@ -191,36 +183,19 @@
 	<script src="libs/respond/respond.min.js"></script>
 	<![endif]-->
 
-<!-- Load CSS -->
-<script>
-
-	//Load Libs CSS
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="libs/animate/animate.css";document.getElementsByTagName("head")[0].appendChild(ms);
-
-	//Header Styles (compress & paste to header after release)
-	//var ms=document.createElement("link");ms.rel="stylesheet";
-	//ms.href="_header.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
-	
-	//User Styles + Media Queries
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="_main.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
-
-</script>
-
 <!-- Load Scripts -->
-<script>var scr = {"scripts":[
-	{"src" : "libs/modernizr/modernizr.js", "async" : false},
-	{"src" : "libs/jquery/jquery-1.11.2.min.js", "async" : false},
-	{"src" : "libs/waypoints/waypoints.min.js", "async" : false},
-	{"src" : "libs/animate/animate-css.js", "async" : false},
-	{"src" : "libs/plugins-scroll/plugins-scroll.js", "async" : false},
-	{"src" : "libs/equalHeight/jquery.equalheights.min.js", "async" : false},
-	{"src" : "libs/drawsvg/drawfillsvg.min.js", "async" : false},
-	{"src" : "libs/Magnific-Popup/jquery.magnific-popup.min.js", "async" : false},
-	{"src" : "libs/owl/owl.carousel.min.js", "async" : false},
-	{"src" : "js/common.js", "async" : false}
-</script>
+
+	<script src="libs/modernizr/modernizr.js", "async"></script> 
+	<script src="libs/jquery/jquery-1.11.2.min.js", "async"></script> 
+	<script src="libs/waypoints/waypoints.min.js", "async"></script> 
+	<script src="libs/animate/animate-css.js", "async"></script> 
+	<script src="libs/plugins-scroll/plugins-scroll.js", "async"></script>
+	<script src="libs/equalHeight/jquery.equalheights.min.js", "async"></script> 
+	<script src="libs/drawsvg/drawfillsvg.min.js", "async"></script> 
+	<script src="libs/Magnific-Popup/jquery.magnific-popup.min.js", "async"></script>
+	<script src="libs/owl/owl.carousel.min.js", "async"></script> 
+	<script src="js/common.js", "async"></script>
+
 
 </body>
 </html>
